OpenAPI version is now taken from Maven configuration

--- a/jeaf-generator-test-custom-extension-usage/pom.xml
+++ b/jeaf-generator-test-custom-extension-usage/pom.xml
@@ -90,6 +90,7 @@
 					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 					
 					<generateOpenAPISpec>true</generateOpenAPISpec>
+					<validateOpenAPISpec>true</validateOpenAPISpec>
 					<addIgnoredHeadersToOpenAPISpec>true</addIgnoredHeadersToOpenAPISpec>
 					<openAPICommentStyle>&gt;-</openAPICommentStyle>
 					<restDefaultSuccessStatusCode>201</restDefaultSuccessStatusCode>
