--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
@@ -284,17 +284,18 @@ components:
             sizedArray:
               type: array
               items:
-                type: integer
+                type: 
+                  - integer
+                  - "null"
                 format: int32
               minItems: 10
               maxItems: 100
-              nullable: true
             requiredArray:
               type: array
               items:
-                type: string
+                type: 
+                  - string
               minItems: 1
-              nullable: false
 
     # com.anaptecs.spring.base.ChildB
     ChildB:
@@ -313,10 +314,11 @@ components:
                 A child attribute
               type: array
               items:
-                type: boolean
+                type: 
+                  - boolean
+                  - "null"
               minItems: 11
               maxItems: 42
-              nullable: true
             composition:
               description: |
                 the composition
@@ -822,18 +824,21 @@ components:
         aBooleanArray:
           type: array
           items:
-            type: boolean
-          nullable: true
+            type: 
+              - boolean
+              - "null"
         bBooleanArray:
           type: array
           items:
-            type: boolean
-          nullable: true
+            type: 
+              - boolean
+              - "null"
         cBooleanArray:
           type: array
           items:
-            type: boolean
-          nullable: true
+            type: 
+              - boolean
+              - "null"
         aByteArray:
           type: string
           format: byte
@@ -845,107 +850,124 @@ components:
         aShortArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int32
-          nullable: true
         bShortArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int32
-          nullable: true
         aIntegerArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int32
-          nullable: true
         bIntegerArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int32
-          nullable: true
         cIntegerArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int32
-          nullable: true
         aLongArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int64
-          nullable: true
         bLongArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int64
-          nullable: true
         aBigIntegerArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int64
-          nullable: true
         aCharacterArray:
           type: array
           items:
-            type: string
-          nullable: true
+            type: 
+              - string
+              - "null"
         bCharacterArray:
           type: array
           items:
-            type: string
-          nullable: true
+            type: 
+              - string
+              - "null"
         aFloatArray:
           type: array
           items:
-            type: number
+            type: 
+              - number
+              - "null"
             format: float
-          nullable: true
         bFloatArray:
           type: array
           items:
-            type: number
+            type: 
+              - number
+              - "null"
             format: float
-          nullable: true
         aDoubleArray:
           type: array
           items:
-            type: number
+            type: 
+              - number
+              - "null"
             format: double
-          nullable: true
         bDoubleArray:
           type: array
           items:
-            type: number
+            type: 
+              - number
+              - "null"
             format: double
-          nullable: true
         aBigDecimalArray:
           type: array
           items:
-            type: number
+            type: 
+              - number
+              - "null"
             format: double
-          nullable: true
         aStringArray:
           type: array
           items:
-            type: string
-          nullable: true
+            type: 
+              - string
+              - "null"
         bStringArray:
           type: array
           items:
-            type: string
-          nullable: true
+            type: 
+              - string
+              - "null"
         cStringArray:
           type: array
           items:
-            type: string
+            type: 
+              - string
           minItems: 1
-          nullable: false
 
     # com.anaptecs.spring.base.PrimitiveArraysObjectWithRestrictions
     PrimitiveArraysObjectWithRestrictions:
@@ -957,18 +979,21 @@ components:
         aBooleanArray:
           type: array
           items:
-            type: boolean
-          nullable: true
+            type: 
+              - boolean
+              - "null"
         bBooleanArray:
           type: array
           items:
-            type: boolean
-          nullable: true
+            type: 
+              - boolean
+              - "null"
         cBooleanArray:
           type: array
           items:
-            type: boolean
-          nullable: true
+            type: 
+              - boolean
+              - "null"
         aByteArray:
           type: string
           format: byte
@@ -980,104 +1005,121 @@ components:
         aShortArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int32
-          nullable: true
         bShortArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int32
-          nullable: true
         aIntegerArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int32
-          nullable: true
         bIntegerArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int32
-          nullable: true
         cIntegerArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int32
-          nullable: true
         aLongArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int64
           minItems: 1
-          nullable: true
         bLongArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int64
-          nullable: true
         aBigIntegerArray:
           type: array
           items:
-            type: integer
+            type: 
+              - integer
+              - "null"
             format: int64
-          nullable: true
         aCharacterArray:
           type: array
           items:
-            type: string
-          nullable: true
+            type: 
+              - string
+              - "null"
         bCharacterArray:
           type: array
           items:
-            type: string
-          nullable: true
+            type: 
+              - string
+              - "null"
         aFloatArray:
           type: array
           items:
-            type: number
+            type: 
+              - number
+              - "null"
             format: float
-          nullable: true
         bFloatArray:
           type: array
           items:
-            type: number
+            type: 
+              - number
+              - "null"
             format: float
-          nullable: true
         aDoubleArray:
           type: array
           items:
-            type: number
+            type: 
+              - number
+              - "null"
             format: double
           minItems: 4
           maxItems: 12
-          nullable: true
         bDoubleArray:
           type: array
           items:
-            type: number
+            type: 
+              - number
+              - "null"
             format: double
-          nullable: true
         aBigDecimalArray:
           type: array
           items:
-            type: number
+            type: 
+              - number
+              - "null"
             format: double
-          nullable: true
         aStringArray:
           type: array
           items:
-            type: string
-          nullable: true
+            type: 
+              - string
+              - "null"
         bStringArray:
           type: array
           items:
-            type: string
-          nullable: true
+            type: 
+              - string
+              - "null"
 
     # com.anaptecs.spring.base.PrimitiveObject
     PrimitiveObject:
