--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
 	<artifactId>jeaf-generator-project</artifactId>
-	<version>1.18.0</version>
+	<version>1.18.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>JEAF Generator Project</name>
 	<description>JEAF Generator can be used to generate different kinds of classes from UML Models and thus speed up and professionalize software development.</description>
