Added test for usage of custom profiles

--- a/jeaf-generator-test-custom-extension-usage/pom.xml
+++ b/jeaf-generator-test-custom-extension-usage/pom.xml
@@ -71,6 +71,7 @@
 					<cleanResourceGen>true</cleanResourceGen>
 
 					<!-- Add configuration for customer specific templates and checks -->
+					<customProfileFile>TestProfile.profile.uml</customProfileFile>
 					<customRootTemplate>MyCustomRoot::Root</customRootTemplate>
 					<customCheckFiles>
 						<customCheckFile>CustomChecks</customCheckFile>
