--- a/jeaf-generator-test-service-objects-jakarta/pom.xml
+++ b/jeaf-generator-test-service-objects-jakarta/pom.xml
@@ -79,6 +79,7 @@
 					<resourceGenDirectory>${project.basedir}/src-gen/main/resources</resourceGenDirectory>
 					
 					<enterpriseJavaType>JAVA_EE</enterpriseJavaType>
+					<useArraysOnlyForPrimitives>true</useArraysOnlyForPrimitives>
 
 					<!-- Configure behavior concerning existing files in src-gen and res-gen directory. It is strongly recommended to clean directories before generating new files. -->
 					<cleanSourceGen>false</cleanSourceGen>
