--- a/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/products/product-services.yml
@@ -38,6 +38,7 @@ tags:
   - name: A Tag
   - name: Another Tag
   - name: B Tag
+  - name: Service Tag
 
 paths:
   # ProductService
@@ -46,6 +47,7 @@ paths:
       tags:
         - MasterData
         - Products
+        - Service Tag
       description: |
         Operation returns all available product.
       operationId: getProducts
@@ -88,6 +90,7 @@ paths:
     post:
       tags:
         - Products
+        - Service Tag
       operationId: createProduct
       requestBody:
         required: true
@@ -116,6 +119,8 @@ paths:
           $ref: '#/components/responses/CustomErrorResponse'
     
     head:
+      tags:
+        - Service Tag
       operationId: ping
       responses:
         '202':
@@ -134,6 +139,7 @@ paths:
       tags:
         - MasterData
         - Products
+        - Service Tag
       operationId: getProduct
       parameters:
         - name: id
@@ -168,6 +174,7 @@ paths:
       tags:
         - MasterData
         - Products
+        - Service Tag
       operationId: getSortiment
       parameters:
         - name: token
@@ -224,6 +231,8 @@ paths:
     
   /products/ChannelCode:
     post:
+      tags:
+        - Service Tag
       operationId: createChannelCode
       requestBody:
         description: |
@@ -270,6 +279,8 @@ paths:
     
   /products/deprecated/operation:
     get:
+      tags:
+        - Service Tag
       description: |
         
         <br><br>
@@ -297,6 +308,8 @@ paths:
     
   /products/deprecated/context:
     post:
+      tags:
+        - Service Tag
       operationId: deprecatedContext
       parameters:
         - name: token
@@ -343,6 +356,8 @@ paths:
     
   /products/deprecated/beanParams:
     post:
+      tags:
+        - Service Tag
       operationId: deprecatedBeanParam
       parameters:
         - name: token
@@ -373,6 +388,8 @@ paths:
     
   /products/deprecated/params:
     post:
+      tags:
+        - Service Tag
       operationId: deprecatedParams
       parameters:
         - name: param1
@@ -404,6 +421,8 @@ paths:
     
   /products/deprecated/body:
     post:
+      tags:
+        - Service Tag
       operationId: deprecatedBody
       requestBody:
         required: true
@@ -433,6 +452,8 @@ paths:
     
   /products/deprecated/complexBody:
     post:
+      tags:
+        - Service Tag
       description: |
         Please be aware that deprecations on complex bodies are not supported. Instead the whole operation needs to be set to deprecated.
       operationId: deprectedComplexRequestBody
@@ -457,6 +478,8 @@ paths:
     
   /products/deprecated/complexReturn:
     get:
+      tags:
+        - Service Tag
       operationId: deprecatedComplexReturn
       responses:
         '200':
@@ -480,6 +503,8 @@ paths:
     
   /products/specific/{id}:
     patch:
+      tags:
+        - Service Tag
       operationId: loadSpecificThings
       parameters:
         - name: token
@@ -551,6 +576,8 @@ paths:
     
   /products/ChannelCodeObject:
     post:
+      tags:
+        - Service Tag
       operationId: createChannelCodeFromObject
       requestBody:
         description: |
@@ -589,6 +616,7 @@ paths:
     post:
       tags:
         - B Tag
+        - Service Tag
       operationId: addCurrencies
       requestBody:
         required: true
@@ -638,6 +666,7 @@ paths:
     post:
       tags:
         - Another Tag
+        - Service Tag
       operationId: isCurrencySupported
       requestBody:
         required: true
@@ -680,6 +709,8 @@ paths:
     
   /products/codeTypeUsages:
     post:
+      tags:
+        - Service Tag
       operationId: testCodeTypeUsage
       requestBody:
         required: true
@@ -708,6 +739,8 @@ paths:
     
   /products/LocalBeanParam:
     get:
+      tags:
+        - Service Tag
       operationId: testLocalBeanParamType
       parameters:
         - $ref: '#/components/parameters/localKey'
@@ -733,6 +766,8 @@ paths:
     
   /products/ExternalBeanParam:
     get:
+      tags:
+        - Service Tag
       operationId: testExternalBeanParameterType
       parameters:
         - $ref: '../base/product-base.yml#/components/parameters/novaKey'
@@ -758,6 +793,8 @@ paths:
     
   /products/ChildBeanParam:
     get:
+      tags:
+        - Service Tag
       operationId: testChildBeanParameter
       parameters:
         - $ref: '../base/product-base.yml#/components/parameters/novaKey'
@@ -784,6 +821,8 @@ paths:
     
   /products/IBAN:
     post:
+      tags:
+        - Service Tag
       operationId: checkIBAN
       requestBody:
         required: true
@@ -815,6 +854,7 @@ paths:
     get:
       tags:
         - A Tag
+        - Service Tag
       operationId: getChannels
       parameters:
         - name: channelTypes
@@ -849,6 +889,8 @@ paths:
     
   /products/DefaultChannel:
     get:
+      tags:
+        - Service Tag
       operationId: getDefaultChannel
       parameters:
         - name: channelType
@@ -879,6 +921,8 @@ paths:
     
   /products/currencies/{channelCode}:
     get:
+      tags:
+        - Service Tag
       operationId: getSupportedCurrencies
       parameters:
         - name: channelCode
@@ -918,6 +962,8 @@ paths:
     
   /products/async-currencies/{channelCode}:
     get:
+      tags:
+        - Service Tag
       operationId: getSupportedCurrenciesAsync
       parameters:
         - name: channelCode
@@ -957,6 +1003,8 @@ paths:
     
   /products/test-date-query-params/{path}:
     get:
+      tags:
+        - Service Tag
       operationId: testDateQueryParams
       parameters:
         - name: path
@@ -1036,6 +1084,8 @@ paths:
     
   /products/test-date-query-params-beans/{path}:
     get:
+      tags:
+        - Service Tag
       operationId: testDateQueryParamsBean
       parameters:
         - name: offsetDateTime
@@ -1119,6 +1169,8 @@ paths:
     
   /products/test-optional-query-params:
     get:
+      tags:
+        - Service Tag
       operationId: testOptionalQueryParams
       parameters:
         - name: query1
@@ -1152,6 +1204,8 @@ paths:
     
   /products/special-header-params:
     get:
+      tags:
+        - Service Tag
       operationId: testSpecialHeaderParams
       responses:
         '204':
@@ -1165,6 +1219,8 @@ paths:
     
   /products/technicalHeaderBeanParam:
     get:
+      tags:
+        - Service Tag
       operationId: testTechnicalHeaderBean
       parameters:
         - name: Reseller
@@ -1198,6 +1254,8 @@ paths:
     
   /products/technicalHeaderParam:
     get:
+      tags:
+        - Service Tag
       operationId: testTechnicalHeaderParam
       parameters:
         - name: Reseller
@@ -1231,6 +1289,8 @@ paths:
     
   /products/testNotInlinedBeanParam:
     post:
+      tags:
+        - Service Tag
       operationId: testNotInlinedBeanParam
       parameters:
         - $ref: '../base/product-base.yml#/components/parameters/header'
@@ -1249,6 +1309,8 @@ paths:
     
   /products/testStringArray:
     post:
+      tags:
+        - Service Tag
       operationId: testPrimitiveArray
       requestBody:
         required: true
@@ -1271,6 +1333,8 @@ paths:
     
   /products/testPrimitiveArrayAsQueryParam:
     get:
+      tags:
+        - Service Tag
       operationId: testPrimitiveArrayAsQueryParam
       parameters:
         - name: intValues
@@ -1301,6 +1365,8 @@ paths:
     
   /products/big-decimal-codes-header:
     get:
+      tags:
+        - Service Tag
       operationId: testMultivaluedHeader
       parameters:
         - name: pCodes
@@ -1332,6 +1398,8 @@ paths:
     
   /products/big-decimal-codes-query:
     get:
+      tags:
+        - Service Tag
       operationId: testMultivaluedQueryParams
       parameters:
         - name: pCodes
@@ -1369,6 +1437,8 @@ paths:
     
   /products/testMulitValuedBeanParams:
     get:
+      tags:
+        - Service Tag
       operationId: testMulitValuedBeanParams
       parameters:
         - name: stringCodeHeader
@@ -1446,6 +1516,8 @@ paths:
     
   /products/no-return-type:
     post:
+      tags:
+        - Service Tag
       operationId: noReturnType
       parameters:
         - name: stringCodeHeader
@@ -1514,6 +1586,8 @@ paths:
     
   /products/delete-something/{id}:
     delete:
+      tags:
+        - Service Tag
       operationId: deleteSomething
       parameters:
         - name: id
@@ -1535,6 +1609,8 @@ paths:
     
   /products/generic-single-value:
     get:
+      tags:
+        - Service Tag
       operationId: genericSingleValueResponse
       responses:
         '200':
@@ -1557,6 +1633,8 @@ paths:
     
   /products/generic-multi-value:
     get:
+      tags:
+        - Service Tag
       operationId: genericMultiValueResponse
       responses:
         '200':
@@ -1579,6 +1657,8 @@ paths:
     
   /products/test-string-code-with-restriction/{string-code}:
     post:
+      tags:
+        - Service Tag
       operationId: testDataTypeWithRestrition
       parameters:
         - name: string-code
@@ -1617,6 +1697,8 @@ paths:
     
   /products/testContext:
     get:
+      tags:
+        - Service Tag
       operationId: testContext
       parameters:
         - name: token
@@ -1664,6 +1746,8 @@ paths:
     
   /products/nested-generics:
     get:
+      tags:
+        - Service Tag
       operationId: testNestedGenericsResponse
       responses:
         '200':
@@ -1686,6 +1770,8 @@ paths:
     
   /products/multivalued-generics:
     get:
+      tags:
+        - Service Tag
       operationId: testNestedMultivaluedResponse
       responses:
         '200':
@@ -1708,6 +1794,8 @@ paths:
     
   /products/testDuplicateGenerics1:
     get:
+      tags:
+        - Service Tag
       operationId: testDuplicateGenerics1
       responses:
         '200':
@@ -1730,6 +1818,8 @@ paths:
     
   /products/testDuplicateGenerics2:
     get:
+      tags:
+        - Service Tag
       operationId: testDuplicateGenerics2
       responses:
         '200':
