--- a/jeaf-generator-test-open-api-dependent-spec/pom.xml
+++ b/jeaf-generator-test-open-api-dependent-spec/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.20.2-SNAPSHOT</version>
+		<version>1.20.2</version>
 	</parent>
 
 	<name>JEAF Generator Test OpenAPI dependent Spec</name>
