Added first draft for expected code

--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
@@ -1495,6 +1495,22 @@ components:
           type: string
           nullable: false
 
+    # com.anaptecs.spring.base.backward.SimpleBackwardCompatibility
+    SimpleBackwardCompatibility:
+      type: object
+      additionalProperties: false
+      required:
+        - deprecatedProperty
+        - successorProperty
+      properties:
+        deprecatedProperty:
+          type: string
+          deprecated: true
+          nullable: false
+        successorProperty:
+          type: string
+          nullable: false
+
     # com.anaptecs.spring.base.Sortiment
     Sortiment:
       type: object
