Implemented and tested #129

--- a/jeaf-generator-test-error-handling/pom.xml
+++ b/jeaf-generator-test-error-handling/pom.xml
@@ -66,6 +66,9 @@
 					<generateDomainObjects>true</generateDomainObjects>
 					<generatePersistentObjects>true</generatePersistentObjects>
 					
+					<disableOpenAPIDependencyChecks>false</disableOpenAPIDependencyChecks>
+					
+					
 					<!-- For test purposes the build does not break if we face problems here as this is the intention of this Maven project -->
 					<breakBuildOnGeneratorError>false</breakBuildOnGeneratorError>
 
